modularized code sturcture